# wenmo-win

./: .gitignore  CMakeLists.txt  CMakePresets.json  DATA-LICENSES.md  NOTICE  README.md
include/wenmo/: InputEngine.hpp
resources/: cedict_pinyin.tsv
scripts/: register.ps1
src/core/: InputEngine.cpp
src/windows/: ClassFactory.cpp  DllMain.cpp  Globals.cpp  Globals.hpp  TextService.cpp  TextService.hpp  WenmoTsf.def
tests/: InputEngineTests.cpp
